assets/css/my.css
html,
body {
    height: 100%;
}

body {
    display: flex;
    flex-direction: column;
}

footer {
    margin-top: auto;
}

table {
    margin-top: 1.6rem;
}

.table td,
.table th {
    border: 1px solid #f3f3f3;
}

.table th:not([align]),
.table td:not([align]) {
    text-align: center;
}

.is-spaced {
    padding: .5rem .75rem;
}

.has-bottom-shadow {
    box-shadow: rgba(0, 0, 0, 0.05) 0px 4px 12px 0px;
}

.has-border-top {
    border-top: 1px solid rgba(0, 0, 0, 0.1);
}

.invisible {
    display: none;
}

.margin-4px-right {
    margin-right: 4px;
}

.menu {
    padding: 1rem;
    border: 2px solid #f3f3f3;
    border-top: none;
    border-left: none;
    border-radius: 6px;
}

.is-active {
    background-color: #33FF33;
}

.settings-panel.settings-panel.settings-panel {
    background-color: white;
    position: fixed;
    top: 52px;
    right: 0;
    padding: 0;
    box-sizing: border-box;
    transform: translateX(100%);
    z-index: 100;
}

#tableSettings {
    background-color: white;
    position: fixed;
    width: 100%;
    top: 53px;
    left: 0;
    padding: 0;
    box-sizing: border-box;
    box-shadow: rgba(0, 0, 0, 0.05) 0px 4px 12px 0px;
    z-index: 1;
}

#tableSettings>p {
    padding-left: 0.75rem;
    font-size: 1.06rem;
}

.active-link {
    color: #212121;
    font-weight: 500;
    cursor: default;
    text-decoration: none;
}

#tableSettings>p>a:hover {
    font-weight: 500;
}

.open:checked~.settings-panel {
    transform: translateX(0);
    transition: 0.35s
}

.open:not(:checked)~.settings-panel {
    transition: 0.35s
}

nav.navbar+section.section {
    padding: 1.5rem 1.5rem;
}

div.column>ul>li {
    margin-bottom: 1rem;
    font-size: 1.4rem;
}

div.column>form>div {
    margin-bottom: 1rem;
    font-size: 1.4rem;
    font-weight: 500;
}

div.column>form>div>input {
    width: 16rem;
}

div.column>ul>li {
    font-weight: 500;
}

div.column>ul>li>span {
    font-weight: 400;
}

.logo {
    color: hsl(217, 71%, 53%);
    transform: scale(1.5, 1.5);
}

.clickable {
    cursor: pointer;
}

.menu .menu-list li a {
    line-height: 18px;
    border-radius: 0;
    transition: background-color .3s ease;
}

.menu .menu-list li a.active {
    background-color: #e4e4e4;
}

.menu .menu-list .toggle a:hover {
    background-color: transparent;
}

#sms-status.disable {
    color: #fff;
    background-color: #ff3860;
}

#sms-status {
    background-color: #23d160;
    color: #fff;
}

#receiptInput {
    width: 4rem;
}

#paymentInput {
    width: 8rem;
}

h4 {
    font-weight: 500;
    font-size: 1.4rem;
    margin-bottom: 0.85rem;
}

.footer {
    padding: 2rem 1.5rem 2rem;
}

